--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,14 +123,14 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PASWORD }}
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: true
-          tags: username/taski_frontend:latest
+          tags: romanmatveev19/taski_frontend:latest
 
     build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -143,12 +143,12 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_LOGIN }}
+          password: ${{ secrets.DOCKER_PASWORD }}
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: ./gateway/
           push: true
           # Тут вместо username должен быть ваш логин на Docker Hub
-          tags: username/taski_gateway:latest
+          tags: romanmatveev19/taski_gateway:latest
